trunk/OldArchive/f2b14744e1a2ba146c8a6223bec346e2-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In function 'int main()':
main.cpp:7:5: error: static assertion failed: it worked
     static_assert(false, "it worked");
     ^
